<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendPlace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="title_activity_friend_place">朋友圈</string>
    <string name="todaycan_count">今日访客</string>
    <string name="total_scan_count">总浏览量</string>
    <string name="loacting">定位中&#8230;</string>

    <!-- time -->
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="publish_content_hint">描述内容</string>
    <string name="cur_position">当前位置:</string>
    <string name="visible_range">可见范围</string>
    <string name="at_txt">提醒谁看</string>
    <string name="publish">发布</string>
    <string name="takepic">拍照</string>
    <string name="photo">相册</string>
    <string name="secphoto">选择图片</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="send">发送</string>
    <string name="publicc">公开</string>
    <string name="privatee">私密</string>
    <string name="msg">消息</string>
    <string name="clearall">清空</string>
    <string name="seccontacts">选择联系人</string>
    <string name="send_successfully">发送成功</string>
    <string name="sending">发送中&#8230;</string>
    <string name="send_failed">发送失败</string>
    <string name="send_photo">正在上传图片</string>
    <string name="publish_mmod">发布心情</string>
    <string name="nonewmsg">没有新内容</string>
    <string name="done">完成</string>
    <string name="say_hint">说点什么吧</string>
    <string name="nullcontentnotice">内容不能为空</string>
    <string name="launed">已赞</string>
    <string name="aboutme">与我相关</string>
    <string name="delete">删除</string>
    <string name="deletefailure">删除失败</string>
    <string name="myabulm">我的相册</string>
    <string name="xiekang">/</string>
    <string name="one">1</string>
    <string name="zan">赞</string>
    <string name="comment">评论</string>
    <string name="submit">提交</string>
    <string name="change_bg">更换背景</string>
    <string name="notice">提示</string>
    <string name="delete_msg">是否要删除心情？</string>
    <string name="delete_comment_notice">是否要删除评论？</string>
    <string name="is_end_notice">目前没有任何显示信息</string>

</resources>